@@ -1,3 +1,8 @@
+Tue Jan 22 16:10:58 2002  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.c: when testing for tryexec, just do an
+	  access (foo, X_OK) if it's an absolute filename
+
 Wed Jan 16 18:34:55 2002  George Lebl <jirka@5z.com>
 
 	* gnome-desktop-item.[ch]: fix error quark, and start things in
